<resources>
    <string name="app_name">TicTacToeGame+</string>
    <string name="title">Splash</string>
    <string name="menu">Menu</string>
    <string name="options">Options</string>
    <string name="help">Help</string>
    <string name="game">Game</string>
    <string name="scores">Scores</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="about">About</string>

    <string name="back_b">Back</string>
    <string name="sound_s">Sound</string>
    <string name="music_s">Music</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_tic_tac_toe_game">TicTacToe Game</string>
    <string name="turn_t">Turn of   </string>
    <string name="draw_b">Draw</string>

    <string name="room_name_enter">Enter name of the room:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="ttt_set">TicTacToe Settings</string>
    <string name="num_squares">Size of the field</string>


    <string name="APP_SETTINGS" translatable="false">appSettings</string>
    <string name="SOUND_STATE" translatable="false">soundState</string>
    <string name="DIFFICULTY_STATE" translatable="false">diffState</string>
    <string name="NUMBER_OF_SQUARES_SETTINGS" translatable="false">NOSSettings</string>
    <string name="NUMBER_OF_PLAYER_SETTINGS" translatable="false">NOPSettings</string>
    <string name="size_sm" translatable="false">3 x 3</string>
    <string name="size_m" translatable="false">4 x 4</string>
    <string name="size_large" translatable="false">5 x 5</string>
    <string name="size_ultraLarge" translatable="false">6 x 6</string>
    <string name="num_players">Type of game</string>
    <string name="difficulty">Enemy difficulty</string>
    <string name="difficultiesLow">Weak Bot</string>
    <string name="difficultiesMedium">Medium Bot</string>
    <string name="difficultiesHARD">MAX POWER</string>
    <string name="programmer">Programmer: Andrey Varyonov</string>
    <string name="design_auth">Design: Kate Varyonova</string>
    <string name="music_auth">Music: Pictures of the Floating World</string>
    <string name="version">Version: 1.0</string>
    <string name="rb_multi">Multiplayer</string>
    <string name="title_activity_multiplayer">MultiplayerActivity</string>
    <string name="roomName_field">Room name</string>
    <string name="enter_room_name_b">Create</string>

    <string name="waiting">Waiting</string>
    <string name="newRoom_b">Host game      >>></string>
    <string name="message_first_part">Player</string>
    <string name="message_second_part">left the game.</string>
    <string name="disconnected">Disconnected.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="playerN_f">Player</string>
    <string name="sizeOfField_f">Size of game field:</string>
    <string name="numberOfWins_f">Wins</string>
    <string name="nameEnter_f">Please, enter your name:</string>
    <string name="name_f">Your name</string>
    <string name="changeName_b">Change name</string>
</resources>
