<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BE0C0000"
    tools:context=".TicTacToe.multi.MultiplayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bg_mult_l"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/fab2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:fontFamily="sans-serif-condensed-light"
            android:shadowColor="#BBF"
            android:shadowRadius="5.0"
            android:text="@string/newRoom_b"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:useCompatPadding="true" />

        <ListView
            android:id="@+id/LinLay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimaryDark"
            android:shadowColor="#BBF"
            android:shadowRadius="5.0"
            app:layout_constraintBottom_toTopOf="@+id/fab2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fab3">

        </ListView>

        <Button
            android:id="@+id/fab"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginTop="16dp"
            android:shadowColor="#BBF"
            android:shadowRadius="5.0"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/back_b"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LinLay"
            app:useCompatPadding="true" />

        <Button
            android:id="@+id/fab3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:fontFamily="sans-serif-condensed-light"
            android:shadowColor="#BBF"
            android:shadowRadius="5.0"
            android:text="@string/changeName_b"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:useCompatPadding="true" />

        <TextView
            android:id="@+id/playerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="Kazan"
            android:textColor="#99F8D6"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/LinLay"
            app:layout_constraintEnd_toStartOf="@+id/fab3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>